@@ -739,9 +739,9 @@ Elapsed:\32
 day
 FM/2:  Tree filter
 You have disabled the ability to select more than one object at a time in Directory Containers, the Collector and Archive Containers.  If that's not what you intended, return to the Settings notebook's DirCnrs page and correct the mistake.
-
+Spare 741
 Viewers ~2
-Default viewers and related controls continued
+ShutdownState
 FM/2: Default DirCnr filter
 FM/2: Default Collector filter
 Don't forget...
